# objectlink-core-cpp

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake-test.yml
examples/app/: CMakeLists.txt  calcsink.cpp  calcsink.h  main.cpp  main.qml  olinkclient.cpp  olinkclient.h  qclientio.cpp  qclientio.h  qolink.cpp  qolink.h
examples/qtolink/: olinkclient.cpp  olinkclient.h  olinkhost.cpp  olinkhost.h  olinkremote.cpp  olinkremote.h
examples/server/: CMakeLists.txt  calcsource.cpp  calcsource.h  main.cpp  olinkhost.cpp  qobjectlinkconnection.cpp  qobjectlinkconnection.h  qolinkserver.cpp  qolinkserver.h  qserver.cpp  qserver.h  qserviceio.cpp  qserviceio.h  remoteconnection.cpp  remoteconnection.h
performance/: CMakeLists.txt  README.md  test_client_node.cpp  test_remote_node.cpp
performance/apigear/: performance.solution.yaml
performance/testApi/apigear/: ApigearConfig.cmake.in  CMakeLists.txt
performance/testApi/modules/api_module/api/implementation/: CMakeLists.txt
src/: CMakeLists.txt  Config.cmake.in
src/olink/: client.cpp  client.h  clientnode.cpp  clientnode.h  clientregistry.cpp  clientregistry.h  consolelogger.cpp  consolelogger.h  iclientnode.h  iobjectsink.h  iobjectsource.h  iremotenode.h  listeners.cpp  listeners.h  messages.h  objectlink.cpp  objectlink.h  objectnode.cpp  objectnode.h  protocol.h  remotenode.cpp  remotenode.h  remoteregistry.cpp  remoteregistry.h  service.cpp  service.h  session.cpp  session.h  sinklink.cpp  sinklink.h  sinknode.cpp  sinknode.h  sinkregistry.cpp  sinkregistry.h  sinktypes.cpp  sinktypes.h  sourcelink.cpp  sourcelink.h  sourcenode.cpp  sourcenode.h  (+11 more)
src/olink/client/: client.cpp  client.h  clientregistry.cpp  clientregistry.h  clienttypes.cpp  clienttypes.h
src/olink/core/: basenode.cpp  basenode.h  consolelogger.cpp  consolelogger.h  defaultcontentserializer.h  defaultmessageserializer.h  imessageserializer.h  listeners.cpp  listeners.h  loopbackwriter.cpp  loopbackwriter.h  messages.cpp  messages.h  node.cpp  node.h  olink_common.h  olinkcontent.cpp  olinkcontent.h  protocol.cpp  protocol.h  stdoutlogger.cpp  stdoutlogger.h  types.cpp  types.h  uniqueidobjectstorage.cpp  uniqueidobjectstorage.h
src/olink/shared/: basenode.cpp  basenode.h  baseregistry.cpp  baseregistry.h
src/olink/sink/: sinknode.cpp  sinknode.h  sinkregistry.cpp  sinkregistry.h  sinktypes.cpp  sinktypes.h
src/olink/source/: sourcenode.cpp  sourcenode.h  sourceregistry.cpp  sourceregistry.h  sourcetypes.cpp  sourcetypes.h
src/tests/: sinkobject.hpp  sourceobject.hpp  test_main.cpp  test_olink.cpp  test_protocol.cpp  tst_olink.cpp
src/wamp/: session.cpp  session.h  stdoutlogger.cpp  tst_wamp.cpp  types.h
tests/: CMakeLists.txt  matchers.h  mocks.h  mocksink.hpp  mocksource.hpp  sinkobject.hpp  sourceobject.hpp  test_client_node.cpp  test_client_registry.cpp  test_noexcept.cpp  test_olink.cpp  test_protocol.cpp  test_remote_node.cpp  test_remote_registry.cpp  test_static.cpp  test_thread_safety.cpp  test_uniqueidstorage.cpp
